# latero-demo

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  INSTALL  LICENSE  README  README.md  create_app_bundle.sh
Resources/: line-diagonal.gen  line-horizontal.gen  line-vertical.gen  vib-diagonal.gen  vib-horizontal.gen  vib-vertical.gen  wave-fast-diagonal.gen  wave-fast-horizontal.gen  wave-fast-vertical.gen  wave-slow-diagonal.gen  wave-slow-horizontal.gen  wave-slow-vertical.gen
appbundle/: Info.plist  latero-demo.icns
src/: CMakeLists.txt  drawing.cpp  drawing.h  main.cpp  mainwindow.cpp  mainwindow.h  managerwidget.cpp  managerwidget.h  virtuallaterowidget.cpp  virtuallaterowidget.h
